<resources>
    <string name="app_name">Resource File</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="other">Other</string>
    <string name="who">You are:</string>
    <string name="what">Your vaccine:</string>
    <string name="kexing">Kexing</string>
    <string name="guoyao">Guoyao</string>
    <string name="kangxinuo">Kangxinuo</string>
    <string name="monitor">The monitor reminds me</string>
    <string name="housemates">The housemate reminds me</string>
    <string name="page_layout">Page layout: narrow screen</string>
    <string name="choice">Your choice</string>
    <string name="clear">Clear choice</string>
    <string name="no">No choice yet!</string>
    <string name="display_teacher">You are a teacher</string>
    <string name="display_student">You are a student</string>
    <string name="display_identity">You are not a teacher or a student</string>
    <string name="Y_kexing">You were vaccinated against Sinovac</string>
    <string name="N_kexing">You didn\'t get the Sinovac vaccine</string>
    <string name="Y_guoyao">You were vaccinated against Chinese medicine</string>
    <string name="N_guoyao">You didn\'t get the Chinese medicine vaccine</string>
    <string name="Y_kangxinuo">You were vaccinated against Concinol</string>
    <string name="N_kangxinuo">You didn\'t get the Concinol vaccine</string>
    <string name="N_monitor">The monitor does not remind me</string>
    <string name="N_housemates">The housemate does not remind me</string>
    <string name="wide">Wide screen</string>
    <string name="narrow">Narrow screen</string>
    <string name="selection">The current selection:</string>
    <string name="first">1.identity:</string>
    <string name="second">2.vaccine:</string>
    <string name="third">3.who remind you:</string>
    <string name="fourth">Display setting:</string>
    <string name="tip1">(No choice yet!)</string>
    <string name="tip2">(Didn\'t get the vaccine on the list)</string>
    <string name="tip3">(Good boy)</string>
    <string name="monitor_n">monitor </string>
    <string name="dormitory_n">head of the dormitory </string>
</resources>
