<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="#FF000000"
    android:showDividers="middle"
    android:orientation="vertical"
    android:padding="@dimen/dp2"
    style="@style/Theme_New">

    <!--第1部分：选择身份（单选按钮组）和疫苗（复选框） -->
    <LinearLayout
        android:id="@+id/linearLayoutIDVaccine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp2"
        android:layout_marginRight="@dimen/dp2"
        android:divider="#ff000000"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp2"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp3"
            android:layout_marginRight="@dimen/dp3"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:drawableLeft="@drawable/user"/>

            <RadioGroup
                android:id="@+id/radioGroupId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/radioStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/radioOthers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp3"
            android:layout_marginRight="@dimen/dp3"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:drawableLeft="@drawable/ytu_16"/>

            <CheckBox
                android:id="@+id/kexing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kexing"/>
                //style="@style/Blue_text"

            <CheckBox
                android:id="@+id/guoyao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guoyao"/>
                //style="@style/Red_text"

            <CheckBox
                android:id="@+id/kangxinuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kangxinuo" />
        </LinearLayout>
    </LinearLayout>

    <!--第2部分：忘记上网课由谁叫及适应窄屏 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="0">

    <TableRow android:layout_marginBottom="@dimen/dp1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monitor"
            android:textSize="@dimen/text_size" />

        <Switch
            android:id="@+id/switchMonitorCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

    </TableRow>

    <TableRow android:layout_marginBottom="@dimen/dp1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/housemates"
            android:textSize="@dimen/text_size" />

        <Switch
            android:id="@+id/switchRoomLeaderCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </TableRow>
        <TableRow android:layout_marginBottom="@dimen/dp1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page_layout"
                android:textSize="@dimen/text_size" />

            <ToggleButton
                android:id="@+id/toggleButtonWideScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </TableRow>
    </TableLayout>

    <!--第3部分：按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp1"
            android:text="@string/choice"
            android:layout_marginRight="@dimen/dp1" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

    <!--第4部分：信息区（文本框） -->
    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no" />

</LinearLayout>
